@@ -136,7 +136,7 @@ void Lcd_Port::setbit(unsigned int bit_number, bool new_value)
   if( ((bit_mask & value) != 0) ^ (new_value==1))
     {
       if(lcd && lcd->debug & LCD_DEBUG_ENABLE)
-	cout << " Lcd+Port::set_bit bit changed due to a stimulus. new_value = " << new_value <<'\n';
+	cout << " Lcd+Port::set_bit bit " << bit_number << " changed due to a stimulus. new_value = " << new_value <<'\n';
 
       value ^= bit_mask;
 
