@@ -1,3 +1,6 @@
+2004-05-12  Bert Driehuis <driehuis@playbeing.org>
+	* lcd.cc, lcd.h, lcdengine.cc: support CGRAM
+	
 2004-04-13  Scott Dattalo  <scott@dattalo.com>
 	* lcd.h: updated to latest simulator interface changes (The BreakCallBack
 	class has been renamed).
